# ALP

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/deploy/: railway.md
python/: Dockerfile  README.md  pyproject.toml
python/examples/: research_agent.py
python/src/alp/: __init__.py  canonical.py  client.py  crypto.py  errors.py  retry.py  schema.py  server.py  store.py  trust.py  types.py  validator.py
python/src/alp_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/tests/: test_crypto.py  test_postgres_store.py  test_server_flow.py  test_validation.py
schemas/: result-contract.v1.json  task-envelope.v1.json  task-receipt.v1.json
scripts/: e2e_mock.sh  generate_dev_keys.py  provider_smoke.sh
sql/: postgres.sql
sql/migrations/: 001_init.sql
typescript/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
typescript/examples/: scoring-agent.ts
typescript/src/: canonical.ts  client.ts  crypto.ts  errors.ts  index.ts  retry.ts  schema.ts  server.ts  store.ts  trust.ts  types.ts  validator.ts
typescript/tests/: crypto.test.ts  postgres-store.test.ts  server-flow.test.ts  validation.test.ts
