[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alp-python"
version = "0.1.0"
description = "ALP v1 Python SDK and FastAPI server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0",
  "cryptography>=42.0.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "jsonschema>=4.23.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
